syntax = "proto3";

package greet;

option go_package = "./greet/greetpb";

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest{
  Greeting greeting = 1 ;
}

message GreetingResponse {
  string result = 1;
}

//------ Server Streaming
message GreetManyTimesRequest{
  Greeting greeting = 1;
}
message GreetManyTimesResponse{
  string Result = 1;
}

//------ Client Streaming
message LongGreetRequest{
  Greeting greeting = 1 ;
}

message LongGreetResponse{
  string Result = 1;
}

//------ BiDi Streaming
message GreetEveryOneRequest{
  Greeting greeting = 1;
}
message GreetEveryOneResponse{
  string Result = 1;
}

//------- Service
service GreetService {
  //unary
  rpc Greet(GreetingRequest) returns (GreetingResponse) {};

  //server streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){}

  //client streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){}

  //BiDi streaming
  rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse){}
}